[package]
name = "beats"
version = "0.1.0"
authors = ["Gardlok"]
edition = "2018"

[dependencies]
itertools = "^0.9.0"
influx_db_client = "0.5.0"
smol = "^1.2.4"
reqwest = {version = "0.11.3", features = ["blocking"]}
thiserror = "1.0.25"
bus = "2.2.3"
by_address = "1.0.4"
# tokio = {version = "1.5.0", features = ["rt-multi-thread"]}

[dev-dependencies]
beats = {path = "../beats-lite/"}  # Is this the best way ? 
futures = "^0.3.7"
rust-embed = "^5.6.0"
rand = "0.6.5"
