[package]
name = "wings"
version = "0.1.1"
authors = ["Gardlok"]
edition = "2018"

[dependencies]
itertools = "^0.9.0"
influx_db_client = "0.5.0"
smol = "^1.2.4"
reqwest = {version = "0.11.3", features = ["blocking"]}
thiserror = "1.0.25"
bus = "2.2.3"
by_address = "1.0.4"

[dev-dependencies]
wings = {path = "../wings/"}  # Is this the best way ? 
futures = "^0.3.7"
rust-embed = "^5.6.0"
rand = "0.6.5"
criterion = "0.3.1"
lazy_static = "1.4.0"

[[bench]]
name = "benchmark"
harness = false
